Fixed overflow on responsive header, added lost css for contact page

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -26,6 +26,7 @@ body {
   clear: both;
   margin: 0 auto;
   width: 100%;
+  overflow-x: hidden;
 }
 
 /* Headings */
@@ -325,13 +326,16 @@ Header
     width: 300px;
     right: -300px;
     -webkit-transition: right .5s; /* Safari */
-    transition: right .5s;
+    transition: right .4s;
+    transition-timing-function: ease;
   }
 
   #banner nav.opened {
     right: 0;
     -webkit-transition: right .5s; /* Safari */
-    transition: right .5s;
+    transition: right .4s;
+    transition-timing-function: ease;
+    display: block;
   }
 
   #banner nav li {
@@ -566,6 +570,43 @@ Home page
 	padding: 0 30px;
 }
 
+Contact page
+ *****************/
+#content-contact {
+       width: 70%;
+       margin: auto;
+}
+
+#content-contact h2 {
+       margin-bottom: 60px;
+}
+
+#content-contact h3 {
+       display: inline-block;
+       vertical-align: top;
+       margin-top: 0;
+       margin-bottom: 10px;
+}
+
+#content-contact section{
+       width: 80%;
+       margin-left: 15%;
+       display: inline-block;
+       vertical-align: top;
+}
+
+#content-contact section ul {
+       list-style: none;
+       padding: 0;
+       margin: 0;
+       text-align: left;
+}
+
+#content-contact .row {
+       padding-top: 10px;
+       margin-bottom: 50px;
+       border-top: 1px solid #ccc;
+}
 
 /*
 Extras
